# make-your-choice

./: .gitignore  Cargo.toml  Form1.cs  PKGBUILD  README.md  app.manifest  app.rc  build.rs
.agent/rules/: cpu-usage.md
.cargo/: config.toml
.github/workflows/: upstream-sync-build.yml
linux/: Cargo.toml  build.zsh
linux/src/: hosts.rs  main.rs  region.rs  settings.rs  update.rs
src/: main.rs
src/logic/: hosts.rs  mod.rs  ping.rs  settings.rs  update.rs  utils.rs
src/ui/: app.rs  dark_mode.rs  mod.rs
ui/: main.slint
win/: Form1.cs  MakeYourChoice.csproj  Program.cs  TrafficSniffer.cs  format.ps1  make-your-choice.sln
