[package]
name = "make-your-choice"
version = "3.0.0"
edition = "2021"
authors = ["laewliet"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
open = "5.0"
dark-light = "1.0"
slint = { version = "1.5", features = ["backend-qt"] }
futures = "0.3"

[build-dependencies]
slint-build = "1.5"
embed-resource = "2.4"
