[package]
name = "make-your-choice"
version = "2.0.0-RC"
edition = "2021"
authors = ["lawliet"]

[[bin]]
name = "make-your-choice"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ping = "0.5"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
gtk4 = "0.9"
glib = "0.20"
gio = "0.20"
pango = "0.20"
open = "5.0"
